# Olivia

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: dev_setup_integration_test.yml  rust.yml
backend/: Cargo.toml
backend/src/: controller.rs  io_backend.rs  main.rs  plugin_factory.rs  plugin_registry.rs
backend/src/adapter/: actix_server.rs  dummy_io.rs  jack.rs  lilv.rs  mod.rs
core/: Cargo.toml
core/src/: example_plugin.rs  plugin.rs  processor.rs
devtools/: README.md
devtools/dev_setup/: Cargo.toml
devtools/dev_setup/src/: main.rs  midi.rs  playback.rs
devtools/dev_setup_integration_test/: Cargo.toml
devtools/dev_setup_integration_test/src/: main.rs
lilv/: Cargo.toml
lilv/examples/: lv2info.rs  lv2ls.rs
lilv/src/: collection.rs  instance.rs  lib.rs  node.rs  nodes.rs  plugin.rs  plugin_classes.rs  plugins.rs  port.rs  scale_points.rs  uis.rs  world.rs
olivia_backend/: Cargo.toml  run_integration_test.sh
olivia_backend/src/: controller.rs  main.rs  plugin_factory.rs  plugin_registry.rs
olivia_backend/src/adapter/: actix_server.rs  jack.rs  mod.rs
olivia_core/: Cargo.toml
olivia_core/src/: example_plugin.rs  lib.rs  plugin.rs  processor.rs
olivia_lib/: Cargo.toml
olivia_lib/src/: lib.rs  plugin_factory.rs
