[package]
name = "olivia_backend"
version = "0.1.0"
authors = ["Will <will.s.medrano@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2"
crossbeam = "0.8"
env_logger = "0.8"
jack = "0.6"
lilv = { path = "../lilv" }
lilv-sys = "0.2"
log = "0.4"
lv2_raw = "0.2"
olivia_core = {path = "../core" }
serde = { version = "1.0", features = ["derive"] }
wmidi = "4.0"
