[package]
name = "olivia_backend"
version = "0.1.0"
authors = ["Will <will.s.medrano@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
crossbeam = "0.8"
env_logger = "0.7"
jack = "0.6"
log = "0.4"
olivia_core = {path = "../olivia_core" }
serde = { version = "1.0", features = ["derive"] }
wmidi = "4.0"